--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <title>Parallax Scrolling Website</title>
+    <meta name="viewport"  content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"  type="text/css" href="styles.css" />
   </head>
   <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
-    <main>
-      <h1>Home page</h1>
-    </main>
   </body>
 </html>
