--- a/index.html
+++ b/index.html
@@ -6,5 +6,16 @@
     <link rel="stylesheet"  type="text/css" href="styles.css" />
   </head>
   <body>
+    <header>
+      <a href="#" class="logo">Logo</a>
+      <ul class="navigation">
+       <li><a href="#" >Home</li>
+      <li><a href="#" >About</li>
+            <li><a href="#" >Events</li>
+              <li><a href="#" >Contact</li>
+        
+
+      </ul>
+    </header>
   </body>
 </html>
