--- a/index.html
+++ b/index.html
@@ -2,19 +2,18 @@
 <html lang="en">
   <head>
     <title>Parallax Scrolling Website</title>
-    <meta name="viewport"  content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  type="text/css" href="styles.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
     <header>
       <a href="#" class="logo">Logo</a>
       <ul class="navigation">
-       <li><a href="#" >Home</li>
-      <li><a href="#" >About</li>
-            <li><a href="#" >Events</li>
-              <li><a href="#" >Contact</li>
+      <li><a href="#" >Home </a></li>
+      <li><a href="#" >About </a></li>
+       <li><a href="#" >Events</a></li>
+       <li><a href="#" >Contact</a></li>
         
-
       </ul>
     </header>
   </body>
