--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
       <a href="#" class="logo">Logo</a>
       <ul class="navigation">
-      <li><a href="#" >Home </a></li>
+      <li><a href="#" class="active" >Home </a></li>
       <li><a href="#" >About </a></li>
        <li><a href="#" >Events</a></li>
        <li><a href="#" >Contact</a></li>
