--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         
       </ul>
     </header>
+    <section>
+      <h2 id="text">Parallax Website</h2>
+    </section>
   </body>
 </html>
