--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     </header>
     <section>
       <h2 id="text">Parallax Website</h2>
+      <img src="monutain_01.png" id="m1">
     </section>
   </body>
 </html>
