--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <section>
       <h2 id="text">Parallax Website</h2>
       <img src="monutain_01.png" id="m1">
+      <img src="trees_02.png" id="t2">
+
     </section>
   </body>
 </html>
