--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       <h2 id="text">Parallax Website</h2>
       <img src="monutain_01.png" id="m1">
       <img src="trees_02.png" id="t2">
+      <img src="monutain_02.png" id="m2">
+      <img src="trees_01.png" id="t1">
+      <img src="man.png" id="man">
+      <img src="plants.png" id="plants">
 
     </section>
   </body>
