--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
       </ul>
     </header>
-    <section>
+    <section class="parallax">
       <h2 id="text">Parallax Website</h2>
       <img src="monutain_01.png" id="m1">
       <img src="trees_02.png" id="t2">
