--- a/index.html
+++ b/index.html
@@ -18,13 +18,31 @@
     </header>
     <section class="parallax">
       <h2 id="text">Parallax Website</h2>
-      <img src="monutain_01.png" id="m1">
-      <img src="trees_02.png" id="t2">
-      <img src="monutain_02.png" id="m2">
-      <img src="trees_01.png" id="t1">
-      <img src="man.png" id="man">
-      <img src="plants.png" id="plants">
-
+      <img
+        src="https://github.com/DariaSibova/Parallax/raw/main/monutain_01.png"
+        id="m1"
+      />
+      <img
+        src="https://github.com/DariaSibova/Parallax/raw/main/trees_02.png"
+        id="t2"
+      />
+      <img
+        src="https://github.com/DariaSibova/Parallax/raw/main/monutain_02.png"
+        id="m2"
+      />
+      <img
+        src="https://github.com/DariaSibova/Parallax/raw/main/trees_01.png"
+        id="t1"
+      />
+      <img
+        src="https://github.com/DariaSibova/Parallax/raw/main/man.png"
+        id="man"
+      />
+      <img
+        src="https://github.com/DariaSibova/Parallax/raw/main/plants.png"
+        id="plants"
+      />
     </section>
+
   </body>
 </html>
