--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         id="plants"
       />
     </section>
-
+<section class="sec">
+  <h2>Parallax Scrolling Website</h2>
+  <p> Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century. At the time, an unnamed printer created a large collection of font sizes and shapes, using Lorem Ipsum to print samples. Lorem Ipsum not only successfully survived five centuries without noticeable changes, but also stepped into electronic design. It has been popularized in modern times by the publication of Letraset sheets with Lorem Ipsum patterns in the 60s and, more recently, by layout programs such as Aldus PageMaker, which use Lorem Ipsum in their templates.<br><br>Parallax is a change in the apparent position of an object relative to a distant background, depending on the position of the observer.
+    <libero class="lorem200"></libero>
+  </p>
+</section>
   </body>
 </html>
