--- a/index.html
+++ b/index.html
@@ -53,5 +53,15 @@
     <libero class="lorem200"></libero>
   </p>
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+<script>
+  gsap.from("#m1",{
+    scrollTrigger :{
+      scrub: true
+    },
+    y: 200,
+  })
+</script>
   </body>
 </html>
