--- a/index.html
+++ b/index.html
@@ -60,8 +60,22 @@
     scrollTrigger :{
       scrub: true
     },
-    y: 200,
+    y: 100,
   })
+  gsap.from("#m2",{
+    scrollTrigger :{
+      scrub: true
+    },
+    y: 50,
+  })
+  gsap.from("#t2",{
+    scrollTrigger :{
+      scrub: true
+    },
+    x: -50,
+  })
+
+
 </script>
   </body>
 </html>
