--- a/index.html
+++ b/index.html
@@ -74,8 +74,24 @@
     },
     x: -50,
   })
-
-
+  gsap.from("#t1",{
+    scrollTrigger :{
+      scrub: true
+    },
+    x: 50,
+  })
+  gsap.from("#man",{
+    scrollTrigger :{
+      scrub: true
+    },
+    x: -250,
+  })
+  gsap.from("#plants",{
+    scrollTrigger :{
+      scrub: true
+    },
+    x: -50,
+  })
 </script>
   </body>
 </html>
