--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
     },
     x: -50,
   })
+  gsap.from("#text",{
+    scrollTrigger :{
+      scrub: true
+    },
+    x: 600,
+  })
 </script>
   </body>
 </html>
